
        - serializing e.g. ``rgb(0,0,0)`` now defaults to ``rgb(0, 0, 0)``
        - HEX values are minified if possible, e.g. ``#112233`` results in ``#123``
        - improved handling of zero values like ``-0, 0.0`` etc all should come out simply as ``0`` now

    - API CHANGE (minor): ``CSSValue.getFloattype(unitType=None)``, parameter is now optional in which case the current dimension is used.

    + BUGFIX/IMPROVEMENT: rewrite of CSSValue and related classes
        - for CSSValueList values like e.g. ``margin: 0 1px`` there are no more false WARNINGs emitted
        - DIMENSIONs are normalized now, e.g. ``1pX`` results in ``1px``
        - BUGFIX: Parsing of a CSSValue like ``red /**/`` (value, Space, comment) fixed.
        - BUGFIX: Parsing values with ``+`` operator fixed.
        - BUGFIX: ``CSSValueList.__str__`` added (missing last underscore rendered it useless)
        - IMPROVEMENT: Comments should be parsed much better now
        - fixed lots of other minor bugs related to CSSValue

    - BUGFIX: Other priority values than ``!important`` are parsed now. Nevertheless they log an ERROR or raise a SyntaxErr.
        **TODO**: Preference setting. Profile?

    - BUGFIX: Fixed Issue #14, added ``CSSStyleDeclaration().borderLeftWidth``. But prefer to use ``CSSStyleDeclaration()['border-left.width']``.

0.9.5
-----
0.9.5.1 080811
    + **BUGFIX**: Fixed parsing of ``}a,b`` which resulted in TypeError until now.

    + **BUGFIX**: A rule with a selector using an undefined and therefor invalid namespace prefix is ignored now.

    + **BUGFIX**: Removed typo in MediaList which resulted in Exception when parsing medialist containing ``all`` and another media.

    + **BUGFIX**: Reading imported styles may have failed under certain conditions with an AttributeError.

    + FEATURE: Added ``cssutils.VERSION`` which is the current release version, in this case e.g. ``"0.9.5.1"``
