@@ -67,6 +67,8 @@ HEAD
         - HEX values are minified if possible, e.g. ``#112233`` results in ``#123``
         - improved handling of zero values like ``-0, 0.0`` etc all should come out simply as ``0`` now
 
+    - API CHANGE: ``cssutils.utils.Base`` and ``cssutils.utils.Base2`` have been changed and will be removed in favor of new ``cssutils.utils.NewBase``. These are all internal helper classes and should not be used in client code anyway but ye be warned...
+
     - API CHANGE (minor): ``CSSValue.getFloattype(unitType=None)``, parameter is now optional in which case the current dimension is used.
 
     + BUGFIX/IMPROVEMENT: rewrite of CSSValue and related classes
